[gd_scene load_steps=5 format=2]

[ext_resource path="res://theme.tres" type="Theme" id=1]
[ext_resource path="res://src/screens/match/field/player/Player.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="CircleShape2D" id=2]

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
collision_layer = 8
collision_mask = 2147483657
script = ExtResource( 2 )

[node name="Control" type="Control" parent="."]
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
rect_rotation = 90.0
rect_pivot_offset = Vector2( 32, 32 )
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Control"]
margin_right = 64.0
margin_bottom = 64.0
color = Color( 0.290196, 0.101961, 0.101961, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShirtNumber" type="Label" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "21"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ball Detector" type="CollisionShape2D" parent="."]
scale = Vector2( 3, 3 )
shape = SubResource( 1 )

[node name="BallPosition" type="Position2D" parent="."]
position = Vector2( 50.6627, -0.894508 )

[node name="FieldSpotDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="FieldSpotDetector"]
scale = Vector2( 20, 20 )
shape = SubResource( 2 )

[node name="Vision" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Vision"]
scale = Vector2( 50, 50 )
shape = SubResource( 2 )

[node name="Head" type="RayCast2D" parent="."]
cast_to = Vector2( 400, 0 )
[connection signal="area_entered" from="FieldSpotDetector" to="." method="_on_FieldSpotDetector_area_entered"]
[connection signal="area_exited" from="FieldSpotDetector" to="." method="_on_FieldSpotDetector_area_exited"]
[connection signal="body_entered" from="Vision" to="." method="_on_Vision_body_entered"]
[connection signal="body_exited" from="Vision" to="." method="_on_Vision_body_exited"]
